--- a/package.json
+++ b/package.json
@@ -1,45 +1,32 @@
 {
-    "name": "ton-stable",
-    "description": "",
-    "version": "0.1.0",
+    "name": "test-debugger",
+    "version": "0.0.1",
     "scripts": {
-        "build": "npx blueprint build",
-        "test": "jest",
-        "deploy": "npx blueprint run",
-        "prettier": "npx prettier --write '{test,contracts,build}/**/*.{ts,js,json}'"
+        "bp": "blueprint",
+        "start": "blueprint run",
+        "build": "blueprint build",
+        "test": "jest --verbose",
+        "release": "blueprint pack && npm publish --access public"
+    },
+    "dependencies": {
+        "@ton/core": "~0"
     },
     "devDependencies": {
-        "@ton/blueprint": "^0.15.0",
-        "@ton/core": "^0.54.0",
-        "@ton/crypto": "^3.2.0",
-        "@ton/sandbox": "0.16.0-tvmbeta.3",
-        "@ton/test-utils": "^0.4.2",
-        "@ton/ton": "^13.10.0",
-        "@types/jest": "^29.5.4",
-        "@types/node": "^20.2.5",
-        "dotenv": "^16.0.0",
-        "jest": "^29.6.3",
-        "prettier": "^2.8.6",
-        "ts-jest": "^29.0.5",
-        "ts-node": "^10.9.1",
-        "typescript": "^4.9.5"
+        "@tact-lang/compiler": ">=1.6.13 <2.0.0",
+        "@ton-community/func-js": ">=0.9.1",
+        "@ton/blueprint": ">=0.36.0",
+        "@ton/crypto": "^3.3.0",
+        "@ton/sandbox": ">=0.33.0",
+        "@ton/test-utils": ">=0.8.0",
+        "@ton/tolk-js": ">=0.99.0",
+        "@ton/ton": ">=15.2.1 <16.0.0",
+        "@types/jest": "^29.5.14",
+        "@types/node": "^22.15.32",
+        "jest": "^29.7.0",
+        "prettier": "^3.5.3",
+        "ts-jest": "^29.4.0",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.8.3"
     },
-    "overrides": {
-        "@ton-community/func-js-bin": "0.4.5-tvmbeta.3",
-        "@ton-community/func-js": "0.6.3-tvmbeta.3",
-        "@ton-community/sandbox": "0.16.0-tvmbeta.3"
-    },
-    "prettier": {
-        "printWidth": 180
-    },
-    "mocha": {
-        "require": [
-            "chai",
-            "ts-node/register"
-        ],
-        "timeout": 20000
-    },
-    "engines": {
-        "node": ">=16.0.0"
-    }
+    "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
